--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>cloud-provider-payment8001</artifactId>
     <dependencies>
+        <!--引入自己定义的 API 公共模块-->
+        <dependency>
+            <groupId>cn.hust.cloud</groupId>
+            <artifactId>cloud-api-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
