--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>cloud-provider-payment8001</artifactId>
     <dependencies>
+        <!--引入 Eureka Client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
         <!--引入自己定义的 API 公共模块-->
         <dependency>
             <groupId>cn.hust.cloud</groupId>
