--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -15,3 +15,10 @@ spring:
 mybatis: # 整合 mybatis
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: cn.hust.springcloud.entities       #所有Entity别名类所在包
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
