payment service and order service registry from eureka group

--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -10,4 +10,6 @@ eureka:
     register-with-eureka: true # 向 Eureak server 注册
     fetch-registry: true # 从 server 获取其他微服务注册信息
     service-url:
-      defaultZone: http://localhost:7001/eureka
+#      defaultZone: http://localhost:7001/eureka
+      # 微服务注册到 Eureak 集群
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
