--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -23,3 +23,6 @@ eureka:
     service-url:
 #      defaultZone: http://localhost:7001/eureka
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka # 集群版
+  instance:
+    instance-id: payment8001
+    prefer-ip-address: true # actuaor 里实例名称下显示 IP 地址 访问路径显示 IP
