--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -26,3 +26,7 @@ eureka:
   instance:
     instance-id: payment8001
     prefer-ip-address: true # actuaor 里实例名称下显示 IP 地址 访问路径显示 IP
+    # Eureka 客户端向服务端发送心跳的时间间隔
+    lease-renewal-interval-in-seconds: 1
+    # Eureka 服务端收到最后一次心跳后等待时间上限，单位为妙，默认是 90 秒，超时提出服务
+    lease-expiration-duration-in-seconds: 2
