--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -10,6 +10,6 @@ eureka:
     service-url:
       # 设置与 Eureka server 交互的地址查询服务，注册服务都需要依赖这个地址
       defaultZone: http://eureka7002.com:7002/eureka/
-  server:
-    enable-self-preservation: false # 禁用自我保护
-    eviction-interval-timer-in-ms: 2000
+#  server:
+#    enable-self-preservation: false # 禁用自我保护
+#    eviction-interval-timer-in-ms: 2000
