--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -9,7 +9,9 @@ eureka:
     fetch-registry: false # 注册中心不需要去检索服务 拉取其他服务
     service-url:
       # 设置与 Eureka server 交互的地址查询服务，注册服务都需要依赖这个地址
-      defaultZone: http://eureka7002.com:7002/eureka/
+#      defaultZone: http://eureka7002.com:7002/eureka/
+      # 单机模式，7001 向自己注册
+      defaultZone: http://eureka7001.com:7001/eureka/
 #  server:
 #    enable-self-preservation: false # 禁用自我保护
 #    eviction-interval-timer-in-ms: 2000
