--- a/cloud-consumer-feign-hystrix-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-hystrix-order80/src/main/resources/application.yml
@@ -7,3 +7,8 @@ eureka:
     service-url:
 #      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
       defaultZone: http://eureka7001.com:7001/eureka # 单机测试
+
+# 开启 Hystrix 支持
+feign:
+  hystrix:
+    enabled: true
