--- a/cloud-consumer-feign-hystrix-order80/pom.xml
+++ b/cloud-consumer-feign-hystrix-order80/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>cloud-consumer-feign-hystrix-order80</artifactId>
 
     <dependencies>
-        <!--feign 服务调用客户端-->
+        <!--hystrix-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
