--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -6,16 +6,36 @@ spring:
     name: cloud-gateway
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true # 开启从注册中心动态创建路由功能，利用微服务名进行路由
       routes:
         - id: payment_routh # payment_route 路由的 ID，没有固定规则但是要求唯一，建议配合服务名
-          uri: http://localhost:8001    # 匹配后服务的路由地址
+#          uri: http://localhost:8001    # 匹配后服务的路由地址
+          uri: lb://cloud-payment-service # 匹配后提供服务的路由地址
           predicates:
             - Path=/payment/get/**      # 断言，路径相匹配的进行路由
 
         - id: payment_routh2 # payment_route 路由的 ID，没有固定规则但是要求唯一，建议配合服务名
-          uri: http://localhost:8001    # 匹配后服务的路由地址
+#          uri: http://localhost:8001    # 匹配后服务的路由地址
+          uri: lb://cloud-payment-service # 匹配后提供服务的路由地址
           predicates:
             - Path=/payment/lb/**      # 断言，路径相匹配的进行路由
+#            - After=2020-04-16T12:50:44.339+08:00[Asia/Shanghai] # After 断言
+#            - Cookie=username, wsp
+#            - Header=X-Request-Id, \d+ # 请求头含有X-Request-Id 并且值为 整数
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: payment_routh # payment_route 路由的 ID，没有固定规则但是要求唯一，建议配合服务名
+#          uri: http://localhost:8001    # 匹配后服务的路由地址
+#          predicates:
+#            - Path=/payment/get/**      # 断言，路径相匹配的进行路由
+#
+#        - id: payment_routh2 # payment_route 路由的 ID，没有固定规则但是要求唯一，建议配合服务名
+#          uri: http://localhost:8001    # 匹配后服务的路由地址
+#          predicates:
+#            - Path=/payment/lb/**      # 断言，路径相匹配的进行路由
 
 
 eureka:
