--- a/cloud-config-client-3355/src/main/resources/bootstrap.yml
+++ b/cloud-config-client-3355/src/main/resources/bootstrap.yml
@@ -10,6 +10,8 @@ spring:
       name: config # 配置文件名称
       profile: dev # 读取后缀名称 master 分指 config-dev.yml 的配置文件被读取
       uri: http://config3344.com:3344 # 配置中心地址
+  kafka:
+    bootstrap-servers: localhost:9092 # kafka 的服务器地址
 
 eureka:
   client:
