--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>cloud-config-client-3355</module>
         <module>cloud-config-client-3366</module>
         <module>cloud-stream-kafka-provider8801</module>
+        <module>cloud-stream-kafka-consumer8802</module>
+        <module>cloud-stream-kafka-consumer8803</module>
     </modules>
     <packaging>pom</packaging><!--父工程 打包方式 pom-->
 
