--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>cloud-provider-payment8001</artifactId>
     <dependencies>
+        <!--引入 sleuth + zipkin-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+
         <!--引入 Eureka Client-->
         <!--Eureka Client 2.2.1 自动集成了 ribbon-->
         <dependency>
