--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: cloud-payment-service
+  zipkin:
+    base-url: http://localhost:9411 # zipkin 端口
+  sleuth:
+    sampler:
+      probability: 1 # 采样率介于 0 1 之间，1 表示全采样
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource      #当前数据源操作类型
     driver-class-name: com.mysql.cj.jdbc.Driver        # mysql驱动包
@@ -11,6 +16,7 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/db2019?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false&&serverTimezone=Hongkong
     username: root
     password: root
+
 
 mybatis: # 整合 mybatis
   mapper-locations: classpath:mapper/*.xml
