alibaba nacos payment provider

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>cloud-stream-kafka-provider8801</module>
         <module>cloud-stream-kafka-consumer8802</module>
         <module>cloud-stream-kafka-consumer8803</module>
+        <module>cloudalibaba-provider-payment9001</module>
+        <module>cloudalibaba-provider-payment9002</module>
     </modules>
     <packaging>pom</packaging><!--父工程 打包方式 pom-->
 
